2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/save.py (save_main_document):
	Update references to renamed variables and methods.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER.MPLAYER.command):
	Add -slang (without parameters) to avoid loading VobSubs in Matroska
	video containers such that they would override the Gaupol-edited
	subtitle file given with the -sub option.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Set filechooser filename to page.project.video_path.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (_on_tab_event_box_enter_notify_event):
	Use name "Character encoding" instead of "Encoding".

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_pre_open_check):
	Fix order of arguments in _check_file_is_not_open call.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py:
	* gaupol/errors.py:
	* gaupol/gtk/agents/open.py:
	Add gaupol.ParseError and raise that in OpenAgent.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_show_parse_error_dialog):
	Change message wording.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/register.py (_shift_changed_value):
	* gaupol/agents/util.py (_get_format):
	* gaupol/gtk/agents/save.py (save_translation_document):
	Update references to renamed variables and methods.

	* gaupol/gtk/agents/close.py:
	* gaupol/gtk/dialogs/multiclose.py:
	Actually close pages in proper methods and raise Defaults in proper
	places to handle cancellations correctly.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	Fix OSError with initial change of working directory.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	* gaupol/gtk/main.py:
	Move move stuff from main to __init__.
	Rearrange imports in main.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
